# Computer-Vision

./: README.md
FinalProjectCV/: CMakeLists.txt
FinalProjectCV/images/tray1/bounding_boxes/: leftover1_bounding_box.txt
FinalProjectCV/include/: DatasetCategories.h  FoodRecognizer_and_LeftoverEstimator.h  FoodsDetection.h  FoodsSegmentation.h  PerformanceEvaluation.h  ROIsDetection.h
FinalProjectCV/model/: class_first.names  class_second.names  class_side.names
PythonYoloFoodDetection/: train-yolov5-and-onnx-covert.ipynb
